Fixed date-time parsing errors